# datacrawler_xr

./: CMakeLists.txt  README.md  imports.h  main.cpp  run.sh
backend/: .gitignore  CMakeLists.txt  main.cpp  run.sh
backend/modules/h/: storage.hpp
backend/modules/module_a/: downloader.cpp  downloader.hpp  metadata.cpp  metadata.hpp  parser.cpp  parser.hpp
backend/modules/module_b/: serializer.hpp  storage.cpp  storage.hpp
backend/modules/module_c/: queue.hpp
backend/modules/module_d/: scheduler.cpp  scheduler.hpp
backend/modules/src/: app.cpp  storage.cpp
backend/setups/: insert.mongodb.js  playground-3.mongodb.js  sample.json
